# pyadi-jif

./: .coveragerc  .flake8  .vale.ini  Makefile  README.rst  mkdocs.yml  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: coverage.yml  doc.yml  test.yml  tests.yml  vale.yml
0.0.1/: 404.html  index.html
0.0.1/cli/: index.html
0.0.1/converters/: index.html
0.0.1/defs/: index.html
0.0.1/developers/: index.html
0.0.1/parts/: index.html
0.0.2/: 404.html  index.html
0.0.2/cli/: index.html
0.0.2/clocks/: index.html
0.0.2/converters/: index.html
0.0.2/credits/: index.html
0.0.2/defs/: index.html
0.0.2/developers/: index.html
0.0.2/flow/: index.html
0.0.2/fpgas/: index.html
0.0.2/install/: index.html
0.0.2/parts/: index.html
0.0.2/ref/: index.html
0.0.2/search/: search_index.json
adijif/: __init__.py  cli.py  common.py  gekko_trans.py  jesd.py  solvers.py  system.py  types.py
adijif/clocks/: ad9523.py  ad9523_1_bf.py  ad9528.py  ad9528_bf.py  clock.py  hmc7044.py  hmc7044_bf.py
adijif/converters/: ad9081.py  ad9144.py  ad9144_bf.py  ad9680.py  ad9680_bf.py  adrv9009.py  adrv9009_bf.py  converter.py
adijif/dt/: ad9528_dt.py  dt.py
adijif/fpgas/: fpga.py  xilinx.py  xilinx_bf.py
docs/: Makefile  clocks.md  conf.py  converters.md  defs.md  flow.md  fpgas.md  index.md  index.rst  install.md  installation.rst  make.bat  ref.md  usage.rst
docs/devs/: converters.md  jesd.md
docs/draw/: converter.drawio  flow.drawio  sys.drawio
examples/: adrv9009_ad9528.py  converter_clock.py  daq2.py  daq2_ad9528.py  daq2_hmc7044.py  daq2_hmc7044_new.py
gui/: config.py  config_popup.py  gen_ui2py.sh  gui.py  main.py  resource_rc.py
latest/clocks/: index.html
latest/credits/: index.html
latest/flow/: index.html
latest/fpgas/: index.html
latest/install/: index.html
latest/ref/: index.html
latest/search/: search_index.json
master/: 404.html  index.html
master/cli/: index.html
master/clocks/: index.html
tests/: test_ad9081.py  test_adijif.py  test_bf.py  test_butane.py  test_clocks.py  test_daq2.py  test_fpga.py
(+19 files in other folders)
