[tool.poetry]
name = "pyadi-jif"
version = "0.0.1"
description = "Python interface and configurator for ADI JESD Interface Framework"
authors = ["Travis F. Collins <travis.collins@analog.com>"]
license = "GPLv3"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
gekko = "^0.2.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
coverage = "^5.4"
isort = "^5.7.0"
click = "^7.1.2"
bump2version = "^1.0.1"
codespell = "^2.0.0"
pre-commit = "^2.10.1"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.8"
mkdocstrings = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
