[tool.poetry]
name = "pyadi-jif"
version = "0.0.1"
description = "Python interface and configurator for ADI JESD Interface Framework"
authors = ["Travis F. Collins <travis.collins@analog.com>"]
license = "GPLv3"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
gekko = "^0.2.8"
numpy = "^1.20.1"
virtualenv = "20.4.3"
cplex = "^20.1.0"
docplex = "^2.20.204"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.4"}
isort = "^5.7.0"
click = "^7.1.2"
bump2version = "^1.0.1"
codespell = "^2.0.0"
pre-commit = "^2.10.1"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.8"
mkdocstrings = "^0.14.0"
pytest-cov = "^2.11.1"
toml = "^0.10.2"
nox = "^2020.12.31"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
darglint = "^1.6.0"
flake8-annotations = "^2.5.0"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
mypy = "^0.800"
pytype = {version = "^2021.2.9", python = "3.8"}
typeguard = "^2.10.0"
xdoctest = "^0.15.4"
codecov = "^2.1.11"
pytest-xdist = "^2.2.1"
commitizen = "^2.16.0"

[tool.coverage.paths]
source = ["adijif"]

[tool.coverage.run]
branch = true
source = ["adijif"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
